# InkosiOrderManagementSystemMT5

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  config.yaml  environment.yml  mkdocs.yml  pyproject.toml
docker/: Dockerfile.backtest
docker/scripts/: mongo-init.js
docs/: index.md
docs/API_Reference/Python/: index.md
docs/Codes Analysis/: index.md
docs/Codes Analysis/API/: index.md
docs/Codes Analysis/App/: index.md
docs/Codes Analysis/Backtest/: index.md
docs/Codes Analysis/Database/: index.md
docs/Codes Analysis/Database/MongoDB/: index.md
docs/Codes Analysis/Database/PostgreSQL/: index.md
docs/Codes Analysis/Log/: index.md
docs/Codes Analysis/Mailing/: index.md
docs/Codes Analysis/Portfolio/: index.md
docs/Codes Analysis/Scheduler/: index.md
docs/Codes Analysis/Utils/: index.md
docs/Codes Analysis/Web/: index.md
docs/Reference/Clients/Trader Workstation API/: index.md
docs/Risk Management/Model Design/: index.md
docs/Trading Platform/: index.md
docs/Trading Platform/Administrators/: index.md
docs/Trading Platform/Administrators/Portfolio Managers/: index.md
docs/Trading Platform/Algorithmic Trading Strategies/: index.md
docs/Trading Platform/Clients/MetaTrader 5/: index.md
docs/Trading Platform/Investors/: index.md
docs/resources/: Scenario.drawio
docs/resources/schemas/: Phylogeny.drawio  Scenario.drawio
src/: __init__.py
src/inkosi/: __init__.py
src/inkosi/api/: _constants.py  main.py  metatrader.py  schemas.py
src/inkosi/api/v1/: _routes.py
src/inkosi/app/: _constants.py  dependencies.py  main.py  schemas.py
src/inkosi/app/api/v1/: _routes.py
src/inkosi/app/api/v1/endpoints/: profile.py
src/inkosi/app/api/v1/endpoints/admin/: administration.py  operations.py  trades.py
src/inkosi/app/api/v1/endpoints/admin/trades/: database.py  trading.py
src/inkosi/app/api/v1/endpoints/investor/: administration.py  backtest.py  operations.py
src/inkosi/backtest/: models.py
src/inkosi/backtest/app/: main.py
src/inkosi/backtest/operation/: asset.py  backtest.py  models.py  quote.py  schemas.py  sources.py
src/inkosi/database/mongodb/: database.py  models.py  schemas.py
src/inkosi/database/postgresql/: database.py  models.py  schemas.py
src/inkosi/log/: log.py  models.py
src/inkosi/mailing/: mailer.py  schemas.py  utils.py
src/inkosi/models/: log.py
src/inkosi/portfolio/: risk_management.py
src/inkosi/utils/: exceptions.py  settings.py  utils.py
src/inkosi/web/: __init__.py  app.py
