[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Inkosi"
description = "Order Management System"
authors = [
  { email = "marionicdematteis@gmail.com" },
]
maintainers = [
  { email = "marionicdematteis@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
keywords = [
]
classifiers = [
]

dependencies = [
  "MetaTrader5==5.0.45",
  "SQLAlchemy==2.0.21",
  "beartype==0.16.2",
  "fastapi[all]==0.103.2",
  "numpy==1.26.0",
  "omegaconf==2.3.0",
  "pandas==2.1.2",
  "pandas_ta==0.3.14b0",
  "psycopg2-binary==2.9.9",
  "pydantic-settings==2.0.3",
  "pydantic==2.4.2",
  "pymongo==4.5.0",
  "sqlalchemy-utils==0.41.1",
  "streamlit==1.28.0",
  "ta==0.10.3",
  "torch==2.1.0",
  "yfinance==0.2.31",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "pytkdocs[numpy-style]",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/BopaxDev/Inkosi"

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "no cov"]

[tool.coverage.run]
branch = true
parallel = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
